--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,8 @@
 <li>
-  <%= gravatar_for user, size: 50 %>
-  <div class=inline-block>
+  <span class='gravator_frame'>
+    <%= gravatar_for user, size: 50 %>
+  </span>
+  <div class='inline-block'>
     <%= link_to user.name, user %>
     <% if current_user.admin? && !current_user?(user) %>
       | <%= link_to "delete", user, method: :delete,
