--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,9 +1,13 @@
-<div class="show">
-  <div class="microposts">
-    
-    <div class="micropost-container">
-      <%= render @feedmicropost %>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <div class="show">
+      <div class="microposts">
+        
+        <div class="micropost-container">
+          <%= render @feedmicropost %>
 
+        </div>
+      </div>
     </div>
   </div>
 </div>
