--- a/app/views/users/delete.html.erb
+++ b/app/views/users/delete.html.erb
@@ -15,7 +15,9 @@
     <% end %>
 
     <div class="gravatar_edit">
-      <%= gravatar_for @user %>
+      <span class='gravator_frame'>
+        <%= gravatar_for @user %>
+      </span>
     </div>
   </div>
 </div>
