--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -37,7 +37,9 @@
     <% end %>
 
     <div class="gravatar_edit">
-      <%= gravatar_for @user %>
+      <span class='gravator_frame'>
+        <%= gravatar_for @user %>
+      </span>
       <a href="https://gravatar.com/emails" target="_blank">change</a>
     </div>
     <p id="edit_user_page">
