--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,9 @@
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
-      <%= gravatar_for @userprofile %>
+      <span class='gravator_frame'>
+        <%= gravatar_for @userprofile %>
+      </span>
       <h1>
         <%= @userprofile.name %>
       </h1>
@@ -26,23 +28,25 @@
     <div class="tab-content">
       <div id="contents1" class="tab-pane active fade in">
         <% if @userprofile.microposts.any? %>
-          <h3>Microposts (<%= @userprofile.microposts.count %>)</h3>
           <ol class="microposts">
             <%= render @microposts %>
           </ol>
           <div class='center'><%= paginate @microposts %></div>
+        <% else %>
+          <p>No microposts</p>
         <% end %>
       </div>
       
       <div id="contents2" class="tab-pane fade">
         <% if @comments_and_likes.any? %>
-          <h3>Comments & Likes</h3>
           <ol class="microposts jscroll">
             <% @comments_and_likes.each do |activity| %>
               <%= render partial: 'notifications/comment_and_like', locals: {activity: activity} %>
             <% end %>
             <div class='center'><%= paginate @comments_and_likes %></div>
           </ol>
+        <% else %>
+          <p>No comments, likes</p>
         <% end %>
       </div>
     </div>
