--- a/app/views/subscribes/_subscribe.html.erb
+++ b/app/views/subscribes/_subscribe.html.erb
@@ -7,7 +7,7 @@
   <% else %>
     <div><%= hidden_field_tag :userprofile_id, current_user.id, { id: SecureRandom.hex(4) } %></div>
   <% end %>
-  <%= button_tag :type => "submit", class: "btn btn-link unsubscribe-btn inline-block" do %>
+  <%= button_tag :type => "submit", class: "btn unsubscribe-btn inline-block" do %>
     <i class="far fa-bell fa-lg unsubscribe-btn inline-block"></i>
   <% end %>
 <% end %>
