--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, @userprofile.name) %>
 <div class="row">
   <aside class="col-md-4">
-    <section class="user_info">
+    <section class="user_info user_show">
       <span class='gravator_frame'>
         <%= gravatar_for @userprofile %>
       </span>
