--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <title><%= full_title(yield(:title)) %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%= display_meta_tags(default_meta_tags(full_title(yield(:title)))) %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <% if Rails.env.staging? %>
@@ -29,9 +29,9 @@
     <%= javascript_pack_tag 'application',
                                'data-turbolinks-track': 'reload' %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jscroll/2.4.1/jquery.jscroll.min.js"></script>
-    <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">-->
+    <%# <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">-->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>--> %>
     <%= render 'layouts/shim' %>
   </head>
   <body>
@@ -44,7 +44,7 @@
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
-    <!-- pdfの遅延読み込み -->
+    <%# <!-- pdfの遅延読み込み --> %>
     <%# <script>
       function pdf_defer() {
         var iframes = document.querySelectorAll('.pdf');
