--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <%= link_to image_tag("logo_alfnet.webp", alt: "alfnet logo", height: "28px"),
+    <%= link_to image_tag("logo_alfnet.png", alt: "alfnet logo", height: "28px"),
                       "https://alfnet.info", target: :_blank, rel: "noopener noreferrer" %>
   </small>
   <nav>
