--- a/app/views/slides/_slide_modal.html.erb
+++ b/app/views/slides/_slide_modal.html.erb
@@ -15,8 +15,8 @@
         <%= f.text_area :file_link, placeholder: "Please input a link of file" %>
       </div>
       <div class="method_link_container inline-block">
-        <%= link_to "Google Slides の埋め込みコードの取得方法", googleslides_help_path %>
-        <%= link_to "PowerPoint の埋め込みコードの取得方法", powerpoint_help_path %>
+        <%= link_to "Google Slides 埋め込みコード取得方法", googleslides_help_path %>
+        <%= link_to "PowerPoint 埋め込みコード取得方法", powerpoint_help_path %>
       </div>
       <%= f.submit "OK", class: "btn btn-primary btn-ok" %>
     <% end %>
