--- a/app/views/helps/powerpoint.html.erb
+++ b/app/views/helps/powerpoint.html.erb
@@ -1,1 +1,32 @@
-<p>PowerPoint</p>
+<% provide(:title, "PowerPoint 埋め込みコード取得") %>
+
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <div class='method_container'>
+      <h1>PowerPoint 埋め込みコード取得</h1>
+      <p class='help_description inline-block'>学校アカウントや企業アカウントを使用している場合、埋め込みコードの取得（公開等）を禁止している場合があります。必要に応じて組織内の管理者に問い合わせてください。</p>
+      <ol>
+        <li>
+          <p><strong>OneDrive に保存されている</strong>投稿したい PowerPoint を <strong>OneDrive 上（Web版）</strong>で開く</p>
+        </li>
+        <li>
+          <p>’ファイル’タブ をクリック</p>
+          <%= image_tag("methods/PowerPoint/1", alt: "PowerPointの埋め込みコードの取得方法1") %>
+        </li>
+        <li>
+          <p>’共有’ → ’埋め込み’ の順にクリック</p>
+          <%= image_tag("methods/PowerPoint/2", alt: "PowerPointの埋め込みコードの取得方法2") %>
+        </li>
+        <li>
+          <p>コードを<strong>いじらずにそのまま</strong> ’コピー’ をクリック</p>
+          <%= image_tag("methods/PowerPoint/3", alt: "PowerPointの埋め込みコードの取得方法3") %>
+        </li>
+        <li>
+          <p>コピーしたコードを<strong>いじらずにそのまま</strong>ペーストする（貼り付ける）</p>
+          <%= image_tag("methods/PowerPoint/4", alt: "PowerPointの埋め込みコードの貼り付け") %>
+        </li>
+      </ol>
+      <%= link_to "戻る", :back, class: "back_link" %>
+    </div>
+  </div>
+</div>
