--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
           <li><%= link_to "Feed", microposts_path %></li>
           <li><%= link_to "Users", users_path %></li>
         <% end %>
-        <li><%= link_to "Help", "https://alfnet.info/contact", target: :_blank, rel: "noopener noreferrer" %></li>
+        <li><%= link_to "Help", help_path %></li>
         <% if logged_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
