add image file_prefix

--- a/app/views/helps/powerpoint.html.erb
+++ b/app/views/helps/powerpoint.html.erb
@@ -11,19 +11,19 @@
         </li>
         <li>
           <p>’ファイル’タブ をクリック</p>
-          <%= image_tag("methods/PowerPoint/1", alt: "PowerPointの埋め込みコードの取得方法1") %>
+          <%= image_tag("methods/PowerPoint/1.png", alt: "PowerPointの埋め込みコードの取得方法1") %>
         </li>
         <li>
           <p>’共有’ → ’埋め込み’ の順にクリック</p>
-          <%= image_tag("methods/PowerPoint/2", alt: "PowerPointの埋め込みコードの取得方法2") %>
+          <%= image_tag("methods/PowerPoint/2.png", alt: "PowerPointの埋め込みコードの取得方法2") %>
         </li>
         <li>
           <p>コードを<strong>いじらずにそのまま</strong> ’コピー’ をクリック</p>
-          <%= image_tag("methods/PowerPoint/3", alt: "PowerPointの埋め込みコードの取得方法3") %>
+          <%= image_tag("methods/PowerPoint/3.png", alt: "PowerPointの埋め込みコードの取得方法3") %>
         </li>
         <li>
           <p>コピーしたコードを<strong>いじらずにそのまま</strong>ペーストする（貼り付ける）</p>
-          <%= image_tag("methods/PowerPoint/4", alt: "PowerPointの埋め込みコードの貼り付け") %>
+          <%= image_tag("methods/PowerPoint/4.png", alt: "PowerPointの埋め込みコードの貼り付け") %>
         </li>
       </ol>
       <%= link_to "戻る", :back, class: "back_link" %>
