--- a/app/views/helps/googleslides.html.erb
+++ b/app/views/helps/googleslides.html.erb
@@ -11,23 +11,23 @@
         </li>
         <li>
           <p>’ファイル’ → ’ウェブに公開’ の順にクリック</p>
-          <%= image_tag("methods/GoogleSlides/1", alt: "Googleスライドの埋め込みコードの取得方法1") %>
+          <%= image_tag("methods/GoogleSlides/1.png", alt: "Googleスライドの埋め込みコードの取得方法1") %>
         </li>
         <li>
           <p>’埋め込む’タブ → ’公開’ の順にクリック</p>
-          <%= image_tag("methods/GoogleSlides/2", alt: "Googleスライドの埋め込みコードの取得方法2") %>
+          <%= image_tag("methods/GoogleSlides/2.png", alt: "Googleスライドの埋め込みコードの取得方法2") %>
         </li>
         <li>
           <p>’OK’ をクリック</p>
-          <%= image_tag("methods/GoogleSlides/3", alt: "Googleスライドの埋め込みコードの取得方法3") %>
+          <%= image_tag("methods/GoogleSlides/3.png", alt: "Googleスライドの埋め込みコードの取得方法3") %>
         </li>
         <li>
           <p>コードを<strong>いじらずにそのまま</strong>コピーする</p>
-          <%= image_tag("methods/GoogleSlides/4", alt: "Googleスライドの埋め込みコードの取得方法4") %>
+          <%= image_tag("methods/GoogleSlides/4.png", alt: "Googleスライドの埋め込みコードの取得方法4") %>
         </li>
         <li>
           <p>コピーしたコードを<strong>いじらずにそのまま</strong>ペーストする（貼り付ける）</p>
-          <%= image_tag("methods/GoogleSlides/5", alt: "Googleスライドの埋め込みコードの貼り付け") %>
+          <%= image_tag("methods/GoogleSlides/5.png", alt: "Googleスライドの埋め込みコードの貼り付け") %>
         </li>
       </ol>
       <%= link_to "戻る", :back, class: "back_link" %>
