--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: clamp(24px, 6vw, 3em);
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
