--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,7 +1,8 @@
-<aside class="col-md-3 col-md-offset-1 hidden-sm hidden-xs">
+<aside class="col-md-3 col-md-offset-1 hidden-sm hidden-xs sidebar">
   <section class="user_info">
     <%= render 'shared/user_info' %>
   </section>
+  <hr>
   <section class="side_menu">
     <ul class="nav flex-column">
       <li>
