apply new UI first step

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,22 @@
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
-      <%= yield %>
+
+      <% if logged_in? %>
+        <div class="row">
+          <%= render 'shared/sidebar' %>
+          <div class="col-md-7">
+            <%= yield %>
+          </div>
+        </div>
+      <% else %>
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 center">
+            <%= yield %>
+          </div>
+        </div>
+      <% end %>
+      
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
