--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -327,17 +327,40 @@ aside {
 }
 
 .user_info.user_show {
+  margin: 24px 0 8px;
   .gravator_frame {
     width: 90px;
     height: 80px;
+  }
+  h1 {
+    font-size: 2em;
+    text-align: left;
+    letter-spacing: -1px;
+    margin-bottom: 3px;
+    margin-top: 0px;
+  }
+}
+
+.user_info.user_follow {
+  margin: 24px 0 8px;
+  .gravator_frame {
+    width: 60px;
+    height: 50px;
+  }
+  h1 {
+    font-size: 2em;
+    text-align: left;
+    letter-spacing: -1px;
+    margin-bottom: 3px;
+    margin-top: 0px;
   }
 }
 
 .stats {
   overflow: auto;
   margin-top: 0;
-  margin-bottom: 5px;
-  padding: 0;
+  margin-bottom: 8px;
+  padding-left: 45px;
   a {
     float: left;
     padding: 0 10px;
@@ -357,7 +380,16 @@ aside {
   }
 }
 
+.stats.user_follow {
+  padding-left: 24px;
+  padding-bottom: 16px;
+  margin-bottom: 8px;
+  border-bottom: 1px solid gray;
+}
+
+
 .user_avatars {
+  padding-left: 30px;
   .gravator_frame {
     width: 32px;
     height: 32px;
