--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,37 +1,33 @@
 <% provide(:title, @title) %>
-<div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <span class='gravator_frame'>
-        <%= gravatar_for(@userprofile, size: 50) %>
-      </span>
-      <h1><%= @userprofile.name %></h1>
-      <span><%= link_to "view my profile", @userprofile %></span>
-      <span><b>Microposts:</b> <%= @userprofile.microposts.count %></span>
-    </section>
-    <section class="stats">
-      <%= render 'shared/stats' %>
-      <% if @users.any? %>
-        <div class="user_avatars">
-          <% @users.each do |user| %>
-            <span class='gravator_frame'>
-              <%= link_to gravatar_for(user, size: 30), user %>
-            </span>
-          <% end %>
-        </div>
+
+<h1><%= @title %></h1>
+<section class="user_info user_follow">
+  <span class='gravator_frame'>
+    <%= gravatar_for @userprofile, size: 50 %>
+  </span>
+  <h1><%= @userprofile.name %></h1>
+  <span><%= link_to "view my profile", @userprofile %></span>
+  <span><b>Microposts:</b> <%= @userprofile.microposts.count %></span>
+</section>
+<section class="stats user_follow">
+  <%= render 'shared/stats' %>
+  <% if @users.any? %>
+    <div class="user_avatars">
+      <% @users.each do |user| %>
+        <span class='gravator_frame'>
+          <%= link_to gravatar_for(user, size: 30), user %>
+        </span>
       <% end %>
-    </section>
-  </aside>
-  <div class="col-md-8">
-    <h3><%= @title %></h3>
-    <% if @users.any? %>
-      <ul class="users follow">
-        <%= render @users %>
-        <!--<% @users.each do |user| %>-->
-        <!--  <%= render user %>-->
-        <!--<% end %>-->
-      </ul>
-      <div class='center'><%= paginate @users %></div>
-    <% end %>
-  </div>
-</div>
+    </div>
+  <% end %>
+</section>
+<% if @users.any? %>
+  <div class='center'><%= paginate @users %></div>
+  <ul class="users follow">
+    <%= render @users %>
+    <!--<% @users.each do |user| %>-->
+    <!--  <%= render user %>-->
+    <!--<% end %>-->
+  </ul>
+  <div class='center'><%= paginate @users %></div>
+<% end %>
