update font and col

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
       <% if logged_in? %>
         <div class="row">
           <%= render 'shared/sidebar' %>
-          <div class="col-md-7">
+          <div class="col-md-7 col-sm-7">
             <%= yield %>
           </div>
         </div>
