--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<aside class="col-md-3 col-md-offset-1 hidden-sm hidden-xs sidebar">
+<aside class="col-md-3 col-md-offset-1 col-sm-4 hidden-xs sidebar">
   <section class="user_info">
     <%= render 'shared/user_info' %>
   </section>
