update posting slide method

--- a/app/views/helps/powerpoint.html.erb
+++ b/app/views/helps/powerpoint.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, "PowerPoint 埋め込みコード取得") %>
+<% provide(:title, "PowerPoint 投稿方法") %>
 
 <div class='method_container'>
-  <h1>PowerPoint 埋め込みコード取得</h1>
+  <h1>PowerPoint 投稿方法</h1>
   <p class='help_description inline-block'>学校アカウントや企業アカウントを使用している場合、埋め込みコードの取得（公開等）を禁止している場合があります。必要に応じて組織内の管理者に問い合わせてください。</p>
   <ol>
     <li>
@@ -9,19 +9,23 @@
     </li>
     <li>
       <p>’ファイル’タブ をクリック</p>
-      <%= image_tag("methods/PowerPoint/1.png", alt: "PowerPointの埋め込みコードの取得方法1") %>
+      <%= image_tag("methods/PowerPoint/1.png", alt: "PowerPointの投稿方法1") %>
     </li>
     <li>
       <p>’共有’ → ’埋め込み’ の順にクリック</p>
-      <%= image_tag("methods/PowerPoint/2.png", alt: "PowerPointの埋め込みコードの取得方法2") %>
+      <%= image_tag("methods/PowerPoint/2.png", alt: "PowerPointの投稿方法2") %>
     </li>
     <li>
-      <p>コードを<strong>いじらずにそのまま</strong> ’コピー’ をクリック</p>
-      <%= image_tag("methods/PowerPoint/3.png", alt: "PowerPointの埋め込みコードの取得方法3") %>
+      <p>埋め込みコードを<strong>いじらずにそのまま</strong> ’コピー’ をクリック</p>
+      <%= image_tag("methods/PowerPoint/3.png", alt: "PowerPointの投稿方法3") %>
     </li>
     <li>
-      <p>コピーしたコードを<strong>いじらずにそのまま</strong>ペーストする（貼り付ける）</p>
+      <p>Portcutio の ’ホーム’ から、’スライド’ボタン をクリック</p>
       <%= image_tag("methods/PowerPoint/4.png", alt: "PowerPointの埋め込みコードの貼り付け") %>
+    </li>
+    <li>
+      <p>コピーしたコードを<strong>いじらずにそのまま</strong>ペースト（貼り付ける）し、’OK’ボタンをクリック</p>
+      <%= image_tag("methods/PowerPoint/5.png", alt: "PowerPointの埋め込みコードの貼り付け") %>
     </li>
   </ol>
   <%= link_to "戻る", :back, class: "back_link" %>
