--- a/app/views/helps/googleslides.html.erb
+++ b/app/views/helps/googleslides.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, "Google Slides 埋め込みコード取得") %>
+<% provide(:title, "Google Slides 投稿方法") %>
 
 <div class='method_container'>
-  <h1>Google Slides 埋め込みコード取得</h1>
+  <h1>Google Slides 投稿方法</h1>
   <p class='help_description inline-block'>学校アカウントや企業アカウントを使用している場合、埋め込みコードの取得（公開等）を禁止している場合があります。必要に応じて組織内の管理者に問い合わせてください。</p>
   <ol>
     <li>
@@ -9,23 +9,27 @@
     </li>
     <li>
       <p>’ファイル’ → ’ウェブに公開’ の順にクリック</p>
-      <%= image_tag("methods/GoogleSlides/1.png", alt: "Googleスライドの埋め込みコードの取得方法1") %>
+      <%= image_tag("methods/GoogleSlides/1.png", alt: "Googleスライドの投稿方法1") %>
     </li>
     <li>
       <p>’埋め込む’タブ → ’公開’ の順にクリック</p>
-      <%= image_tag("methods/GoogleSlides/2.png", alt: "Googleスライドの埋め込みコードの取得方法2") %>
+      <%= image_tag("methods/GoogleSlides/2.png", alt: "Googleスライドの投稿方法2") %>
     </li>
     <li>
       <p>’OK’ をクリック</p>
-      <%= image_tag("methods/GoogleSlides/3.png", alt: "Googleスライドの埋め込みコードの取得方法3") %>
+      <%= image_tag("methods/GoogleSlides/3.png", alt: "Googleスライドの投稿方法3") %>
     </li>
     <li>
-      <p>コードを<strong>いじらずにそのまま</strong>コピーする</p>
-      <%= image_tag("methods/GoogleSlides/4.png", alt: "Googleスライドの埋め込みコードの取得方法4") %>
+      <p>埋め込みコードを<strong>いじらずにそのまま</strong>コピー</p>
+      <%= image_tag("methods/GoogleSlides/4.png", alt: "Googleスライドの投稿方法4") %>
     </li>
     <li>
-      <p>コピーしたコードを<strong>いじらずにそのまま</strong>ペーストする（貼り付ける）</p>
-      <%= image_tag("methods/GoogleSlides/5.png", alt: "Googleスライドの埋め込みコードの貼り付け") %>
+      <p>Portcutio の ’ホーム’ から、’スライド’ボタン をクリック</p>
+      <%= image_tag("methods/GoogleSlides/5.png", alt: "スライドの投稿画面へアクセス") %>
+    </li>
+    <li>
+      <p>コピーしたコードを<strong>いじらずにそのまま</strong>ペースト（貼り付ける）し、’OK’ボタン をクリック</p>
+      <%= image_tag("methods/GoogleSlides/6.png", alt: "Googleスライドの埋め込みコードを貼り付け") %>
     </li>
   </ol>
   <%= link_to "戻る", :back, class: "back_link" %>
