--- a/app/views/slides/_slide_modal.html.erb
+++ b/app/views/slides/_slide_modal.html.erb
@@ -12,11 +12,11 @@
       <%= f.radio_button :file_type, :PowerPoint %>
       <%= f.label :file_type, "PowerPoint", {value: :PowerPoint, style: "display: inline-block;"} %>
       <div class="field">
-        <%= f.text_area :file_link, placeholder: "Please input a link of file" %>
+        <%= f.text_area :file_link, placeholder: "スライドの埋め込みコードを入力する" %>
       </div>
       <div class="method_link_container inline-block">
-        <%= link_to "Google Slides 埋め込みコード取得方法", googleslides_help_path %>
-        <%= link_to "PowerPoint 埋め込みコード取得方法", powerpoint_help_path %>
+        <%= link_to "Google Slides 投稿方法", googleslides_help_path %>
+        <%= link_to "PowerPoint 投稿方法", powerpoint_help_path %>
       </div>
       <%= f.submit "OK", class: "btn btn-primary btn-ok" %>
     <% end %>
