--- a/app/views/helps/show.html.erb
+++ b/app/views/helps/show.html.erb
@@ -3,7 +3,7 @@
 <h1>Help</h1>
 <div class='helptop_concainer'>
   <ul>
-    <li><%= link_to 'Google Slides の埋め込みコードの取得方法', googleslides_help_path %></li>
-    <li><%= link_to 'PowerPoint の埋め込みコードの取得方法', powerpoint_help_path %></li>
+    <li><%= link_to 'Google Slides 投稿方法', googleslides_help_path %></li>
+    <li><%= link_to 'PowerPoint 投稿方法', powerpoint_help_path %></li>
   </ul>
 </div>
