--- a/app/views/comments/_reply_form.html.erb
+++ b/app/views/comments/_reply_form.html.erb
@@ -17,7 +17,7 @@
     <% end %>
     
     <div class="field">
-      <%= f.text_area :content, placeholder: "Compose new reply..." %>
+      <%= f.text_area :content, placeholder: "リプライする" %>
     </div>
     <%= f.submit "Post", class: "btn btn-primary" %>
   <% end %>
