--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -11,7 +11,7 @@
     <div><%= hidden_field_tag :userprofile_id, current_user.id, { id: SecureRandom.hex(4) } %></div>
   <% end %>
   <div class="field">
-    <%= f.text_area :content, placeholder: "Compose new comment..." %>
+    <%= f.text_area :content, placeholder: "#{@feedmicropost.user.name}さん の投稿にコメントする" %>
   </div>
   <%= f.submit "Post", class: "btn btn-primary" %>
 <% end %>
