--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: clamp(24px, 6vw, 2.7em);
+  font-size: clamp(32px, 3.8vw, 3em);
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
@@ -267,7 +267,7 @@ aside {
       line-height: 1;
     }
     h1 {
-      font-size: 1.4em;
+      font-size: 2rem;
       text-align: left;
       letter-spacing: -1px;
       margin-bottom: 3px;
@@ -332,7 +332,7 @@ aside {
     height: 80px;
   }
   h1 {
-    font-size: 1.4em;
+    font-size: 2rem;
     text-align: left;
     letter-spacing: -1px;
     margin-bottom: 3px;
@@ -347,11 +347,16 @@ aside {
     height: 50px;
   }
   h1 {
-    font-size: 2em;
+    font-size: 2rem;
     text-align: left;
     letter-spacing: -1px;
     margin-bottom: 3px;
     margin-top: 0px;
+  }
+  span {
+    display: block;
+    margin-bottom: 3px;
+    line-height: 1;
   }
 }
 
@@ -1010,6 +1015,9 @@ span.image {
             display: block;
             float: right;
             padding-right: 4px;
+          }
+          #micropost_file_link {
+            margin-bottom: 4px;
           }
           input {
             display: inline-block;
