--- a/app/views/helps/googleslides.html.erb
+++ b/app/views/helps/googleslides.html.erb
@@ -9,27 +9,27 @@
     </li>
     <li>
       <p>’ファイル’ → ’ウェブに公開’ の順にクリック</p>
-      <%= image_tag("methods/GoogleSlides/1.png", alt: "Googleスライドの投稿方法1") %>
+      <%= image_tag("methods/GoogleSlides/1.png", alt: "「ファイル」、「ウェブに公開」の順にクリック") %>
     </li>
     <li>
       <p>’埋め込む’タブ → ’公開’ の順にクリック</p>
-      <%= image_tag("methods/GoogleSlides/2.png", alt: "Googleスライドの投稿方法2") %>
+      <%= image_tag("methods/GoogleSlides/2.png", alt: "「埋め込む」タブ、「公開」の順にクリック") %>
     </li>
     <li>
       <p>’OK’ をクリック</p>
-      <%= image_tag("methods/GoogleSlides/3.png", alt: "Googleスライドの投稿方法3") %>
+      <%= image_tag("methods/GoogleSlides/3.png", alt: "確認ウインドウで「OK」をクリック") %>
     </li>
     <li>
       <p>埋め込みコードを<strong>いじらずにそのまま</strong>コピー</p>
-      <%= image_tag("methods/GoogleSlides/4.png", alt: "Googleスライドの投稿方法4") %>
+      <%= image_tag("methods/GoogleSlides/4.png", alt: "埋め込みコードをいじらずにそのままコピー") %>
     </li>
     <li>
       <p>Portcutio の ’ホーム’ から、’スライド’ボタン をクリック</p>
-      <%= image_tag("methods/GoogleSlides/5.png", alt: "スライドの投稿画面へアクセス") %>
+      <%= image_tag("methods/GoogleSlides/5.png", alt: "Portcurioの「ホーム」から「スライド」ボタンをクリックしてスライドの投稿画面へアクセス") %>
     </li>
     <li>
-      <p>コピーしたコードを<strong>いじらずにそのまま</strong>ペースト（貼り付ける）し、’OK’ボタン をクリック</p>
-      <%= image_tag("methods/GoogleSlides/6.png", alt: "Googleスライドの埋め込みコードを貼り付け") %>
+      <p>コピーした埋め込みコードを<strong>いじらずにそのまま</strong>ペースト（貼り付ける）し、’Google Slides’ を選択して ’OK’ボタン をクリック</p>
+      <%= image_tag("methods/GoogleSlides/6.png", alt: "コピーした埋め込みコードをいじらずにそのままテキストボックスにペーストし、「Google Slides」を選択して「OK」ボタンをクリック") %>
     </li>
   </ol>
   <%= link_to "戻る", :back, class: "back_link" %>
