--- a/app/views/helps/powerpoint.html.erb
+++ b/app/views/helps/powerpoint.html.erb
@@ -9,23 +9,23 @@
     </li>
     <li>
       <p>’ファイル’タブ をクリック</p>
-      <%= image_tag("methods/PowerPoint/1.png", alt: "PowerPointの投稿方法1") %>
+      <%= image_tag("methods/PowerPoint/1.png", alt: "Web版パワーポイントのファイルタブをクリック") %>
     </li>
     <li>
       <p>’共有’ → ’埋め込み’ の順にクリック</p>
-      <%= image_tag("methods/PowerPoint/2.png", alt: "PowerPointの投稿方法2") %>
+      <%= image_tag("methods/PowerPoint/2.png", alt: "「共有」、「埋め込み」の順にクリック") %>
     </li>
     <li>
       <p>埋め込みコードを<strong>いじらずにそのまま</strong> ’コピー’ をクリック</p>
-      <%= image_tag("methods/PowerPoint/3.png", alt: "PowerPointの投稿方法3") %>
+      <%= image_tag("methods/PowerPoint/3.png", alt: "埋め込みコードをいじらずに、そのまま「コピー」ボタンをクリック") %>
     </li>
     <li>
       <p>Portcutio の ’ホーム’ から、’スライド’ボタン をクリック</p>
-      <%= image_tag("methods/PowerPoint/4.png", alt: "PowerPointの埋め込みコードの貼り付け") %>
+      <%= image_tag("methods/PowerPoint/4.png", alt: "Portcurioの「ホーム」から「スライド」ボタンをクリックしてスライドの投稿画面へアクセス") %>
     </li>
     <li>
-      <p>コピーしたコードを<strong>いじらずにそのまま</strong>ペースト（貼り付ける）し、’OK’ボタンをクリック</p>
-      <%= image_tag("methods/PowerPoint/5.png", alt: "PowerPointの埋め込みコードの貼り付け") %>
+      <p>コピーした埋め込みコードを<strong>いじらずにそのまま</strong>ペースト（貼り付ける）し、’PowerPoint’ を選択して ’OK’ボタン をクリック</p>
+      <%= image_tag("methods/PowerPoint/5.png", alt: "コピーした埋め込みコードをいじらずにそのままテキストボックスにペーストし、「PowerPoint」を選択して「OK」ボタンをクリック") %>
     </li>
   </ol>
   <%= link_to "戻る", :back, class: "back_link" %>
