change color of toolbar in PWA

--- a/app/views/application/_favicon.html.erb
+++ b/app/views/application/_favicon.html.erb
@@ -6,4 +6,4 @@
 <link rel="shortcut icon" href="<%= asset_path 'favicon/favicon.ico' %>">
 <meta name="msapplication-TileColor" content="#00b564">
 <meta name="msapplication-config" content="<%= asset_path 'favicon/browserconfig.xml.erb' %>">
-<meta name="theme-color" content="#ffffff">
+<meta name="theme-color" content="#FFE6ED">
