--- a/app/assets/images/favicon/site.webmanifest.erb
+++ b/app/assets/images/favicon/site.webmanifest.erb
@@ -1,6 +1,6 @@
 {
-    "name": "Portcurio",
-    "short_name": "Portcurio",
+    "name": "<%= ENV['R_PREFIX'].capitalize %>",
+    "short_name": "<%= ENV['R_PREFIX'].capitalize %>",
     "icons": [
         {
             "src": "<%= asset_path 'favicon/android-chrome-192x192.png' %>",
@@ -13,8 +13,8 @@
             "type": "image/png"
         }
     ],
-    "theme_color": "#ffffff",
-    "background_color": "#ffffff",
+    "theme_color": "#FFE6ED",
+    "background_color": "#FFFFFF",
     "display": "standalone",
     "start_url": "/",
     "scope": "/"
