--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,12 @@
-<% provide(:title, 'All users') %>
+<% provide(:title, @title) %>
 
-<h1>All users</h1>
-
+<h1><%= @title %></h1>
+<div class='user_search_form'>
+  <%= search_form_for @q, url: users_path do |f| %>
+    <%= f.search_field :name_cont, placeholder: "ユーザーを検索" %>
+    <%= f.submit '検索', class: 'btn btn-info' %>
+  <% end %>
+</div>
 <div class='center'><%= paginate @users %></div>
 <div class='users_container'>
   <ul class="users">
@@ -9,3 +14,9 @@
   </ul>
 </div>
 <div class='center'><%= paginate @users %></div>
+<% if @users.empty? %>
+  <p>
+    Couldn't find any user.<br>
+    Please check username you are looking for.
+  </p>
+<% end %>
