--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,20 +2,18 @@
 
 <h1>Sign up</h1>
 
-<%= form_with(model: @user, local: true) do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
+<div class="signup_form">
+  <%= form_with(model: @user, local: true) do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
 
-  <%= f.label :name %>
-  <%= f.text_field :name, class: 'form-control' %>
+    <%= f.text_field :name, class: 'form-control', placeholder: 'Name' %>
 
-  <%= f.label :email %>
-  <%= f.email_field :email, class: 'form-control' %>
+    <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
 
-  <%= f.label :password %>
-  <%= f.password_field :password, class: 'form-control' %>
+    <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
 
-  <%= f.label :password_confirmation, "Password Confirmation" %>
-  <%= f.password_field :password_confirmation, class: 'form-control' %>
+    <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Password Confirmation' %>
 
-  <%= f.submit "Create my account", class: "btn btn-primary" %>
-<% end %>
+    <%= f.submit "Create my account", class: "btn btn-primary" %>
+  <% end %>
+  </div>
