--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
         </div>
       <% else %>
         <div class="row">
-          <div class="col-md-6 col-md-offset-3 center">
+          <div class="col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 center">
             <%= yield %>
           </div>
         </div>
