--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,6 +24,16 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to image_tag("logo_portcurio.png", alt: "portcurio logo", height: "51px"), root_path, id: "service_logo" %>
+      <span class="search_container inline-block">
+        <form class="navbar-form" role="search">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="教材を検索">
+            <span class="input-group-btn">
+              <button type="submit" class="btn btn-default btn-search"><i class="fas fa-search"></i></button>
+            </span>
+          </div>
+        </form>
+      </span>
     </div>
     <nav>
       <ul class="nav navbar-nav navbar-right navbar-collapse collapse" id="navbar">
