--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -597,6 +597,15 @@ input {
 
 /* Users index */
 
+.user_search_form {
+  text-align: center;
+  input { 
+    display: inline-block;
+  }
+  input[type="search"] { width: 200px; }
+  input[type="submit"] { width: 56px; }
+}
+
 .users {
   list-style: none;
   margin: 0;
