--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -14,7 +14,7 @@ $gray-medium-light: #eaeaea;
 
 @media screen and (max-width:374px) {
 	/* 374px以下に適用されるCSS（スマホ用） */
-  .search_container {
+  .content_search_form {
     input.form-control { width: 80px !important; }
   }
 }
@@ -111,6 +111,29 @@ a:hover {
   color:#7F8C8D ;
 }
 
+// 検索窓
+.input-group {
+  display: inline-table;
+  border: 2px solid #DCE4EC;
+  border-radius: 8px;
+  background-color: white;
+  .input-group-btn {
+    width: auto;
+  }
+  input.form-control { 
+    margin: 0;
+    border: none;
+    background-color: none;
+  }
+  .btn-search {
+    background-color: white;
+    border: none;
+    color: #ACB6C0;
+    font-size: 14px;
+  }
+}
+
+
 span.user a {
   color: #34495E;
   font-size: 1.2em;
@@ -127,7 +150,7 @@ span.user a {
     left: 0;
   }
 }
-.search_container {
+.content_search_form {
   form.navbar-form {
     display: flex;
     justify-content: center;
@@ -137,20 +160,8 @@ span.user a {
     margin: 0 0 0 140px;
     border: none;
     .input-group {
-      border: 2px solid #DCE4EC;
-      border-radius: 8px;
-      background-color: white;
       input.form-control { 
-        margin: 0;
         width: 108px;
-        border: none;
-        background-color: none;
-      }
-      .btn-search {
-        background-color: white;
-        border: none;
-        color: #ACB6C0;
-        font-size: 12px;
       }
     }
   }
@@ -599,11 +610,7 @@ input {
 
 .user_search_form {
   text-align: center;
-  input { 
-    display: inline-block;
-  }
   input[type="search"] { width: 200px; }
-  input[type="submit"] { width: 56px; }
 }
 
 .users {
