--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,8 +3,14 @@
 <h1><%= @title %></h1>
 <div class='user_search_form'>
   <%= search_form_for @q, url: users_path do |f| %>
-    <%= f.search_field :name_cont, placeholder: "ユーザーを検索" %>
-    <%= f.submit '検索', class: 'btn btn-info' %>
+    <div class="input-group">
+      <%= f.search_field :name_cont, placeholder: "ユーザーを検索", class: "form-control" %>
+      <span class="input-group-btn">
+        <%= button_tag type: "submit", class: 'btn btn-search' do %>
+          <i class="fas fa-search"></i>
+        <% end %>
+      </span>
+    </div>
   <% end %>
 </div>
 <div class='center'><%= paginate @users %></div>
