--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,6 +1,6 @@
-<% provide(:title, 'All users feed') %>
+<% provide(:title, @title) %>
 
-<h1>All users feed</h1>
+<h1><%= @title %></h1>
 
 <ol class="microposts">
   <%= render @feedall %>
