--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -142,26 +142,28 @@ span.user a {
 
 
 /* header */
-.navbar-header {
-  position: relative;
-  #service_logo { 
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-}
-.content_search_form {
-  #micropost_search {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    padding: 0;
-    margin: 0 0 0 140px;
-    border: none;
-    .input-group {
-      input.form-control { 
-        width: 104px;
+header {
+  .container {
+    position: relative;
+    #service_logo { 
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    .content_search_form {
+      #micropost_search {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 50px;
+        padding: 0;
+        margin: 0 0 0 140px;
+        border: none;
+        .input-group {
+          input.form-control { 
+            width: 104px;
+          }
+        }
       }
     }
   }
