--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-default">
   <div class="container">
-    
     <% if logged_in? %>
-      <div class=icon-container>
+      <div class="icon-container navbar-right">
         <%= link_to notified_notifications_path do %>
           <span class="fa-stack">
             <% if unchecked_notifications.any? %>
@@ -15,14 +14,13 @@
           <% end %>
       </div>
     <% end %>
-    
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <%= link_to image_tag("logo_portcurio.png", alt: "portcurio logo", height: "51px"), root_path, id: "service_logo" %>
       <span class="content_search_form inline-block">
         <%= search_form_for @search_microposts, url: microposts_path do |f| %>
