--- a/app/views/application/_favicon.html.erb
+++ b/app/views/application/_favicon.html.erb
@@ -4,6 +4,8 @@
 <link rel="manifest" href="<%= asset_path 'favicon/site.webmanifest' %>">
 <link rel="mask-icon" href="<%= asset_path 'favicon/safari-pinned-tab.svg' %>" color="#00b564">
 <link rel="shortcut icon" href="<%= asset_path 'favicon/favicon.ico' %>">
+<meta name="apple-mobile-web-app-title" content="Portcurio">
+<meta name="application-name" content="Portcurio">
 <meta name="msapplication-TileColor" content="#00b564">
 <meta name="msapplication-config" content="<%= asset_path 'favicon/browserconfig.xml.erb' %>">
 <meta name="theme-color" content="#FFE6ED">
