--- a/app/views/application/_favicon.html.erb
+++ b/app/views/application/_favicon.html.erb
@@ -2,6 +2,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="<%= asset_path 'favicon/favicon-32x32.png' %>">
 <link rel="icon" type="image/png" sizes="16x16" href="<%= asset_path 'favicon/favicon-16x16.png' %>">
 <link rel="manifest" href="<%= asset_path 'favicon/site.webmanifest' %>">
+<script async src="https://cdn.jsdelivr.net/npm/pwacompat" crossorigin="anonymous"></script>
 <link rel="mask-icon" href="<%= asset_path 'favicon/safari-pinned-tab.svg' %>" color="#00b564">
 <link rel="shortcut icon" href="<%= asset_path 'favicon/favicon.ico' %>">
 <meta name="apple-mobile-web-app-title" content="Portcurio">
