update favicon for windows

--- a/app/views/application/_favicon.html.erb
+++ b/app/views/application/_favicon.html.erb
@@ -8,5 +8,5 @@
 <meta name="apple-mobile-web-app-title" content="Portcurio">
 <meta name="application-name" content="Portcurio">
 <meta name="msapplication-TileColor" content="#00b564">
-<meta name="msapplication-config" content="<%= asset_path 'favicon/browserconfig.xml.erb' %>">
+<meta name="msapplication-config" content="<%= asset_path 'favicon/browserconfig.xml' %>">
 <meta name="theme-color" content="#FFE6ED">
