--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-default">
   <div class="container">
     <% if logged_in? %>
-      <div class="icon-container navbar-right">
+      <div class="icon-container">
         <%= link_to notified_notifications_path do %>
           <span class="fa-stack">
             <% if unchecked_notifications.any? %>
@@ -14,7 +14,7 @@
           <% end %>
       </div>
     <% end %>
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+    <button type="button" class="navbar-toggle offcanvas-toggle" data-toggle="offcanvas" data-target="#js-bootstrap-offcanvas">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -35,30 +35,32 @@
         <% end %>
       </span>
     </div>
-    <nav>
-      <ul class="nav navbar-nav navbar-right navbar-collapse collapse" id="navbar">
-        <li><%= link_to "Home", root_path %></li>
-        <% if logged_in? %>
-          <li><%= link_to "Feed", microposts_path %></li>
-          <li><%= link_to "Users", users_path %></li>
-          <li><%= link_to "Help", help_path %></li>
-        <% end %>
-        <% if logged_in? %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Account <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Activity", activity_notifications_path %></li>
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-              <li><%= link_to "Log out", logout_path, method: :delete %></li>
-            </ul>
-          </li>
-        <% else %>
-          <li><%= link_to "Log in", login_path %></li>
-        <% end %>
-      </ul>
+    <nav role="navigation">
+      <div class="navbar-offcanvas navbar-offcanvas-touch navbar-offcanvas-right" id="js-bootstrap-offcanvas">
+        <ul class="nav navbar-nav navbar-right" id="navbar">
+          <li><%= link_to "Home", root_path %></li>
+          <% if logged_in? %>
+            <li><%= link_to "Feed", microposts_path %></li>
+            <li><%= link_to "Users", users_path %></li>
+            <li><%= link_to "Help", help_path %></li>
+          <% end %>
+          <% if logged_in? %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Account <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Activity", activity_notifications_path %></li>
+                <li><%= link_to "Profile", current_user %></li>
+                <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+                <li><%= link_to "Log out", logout_path, method: :delete %></li>
+              </ul>
+            </li>
+          <% else %>
+            <li><%= link_to "Log in", login_path %></li>
+          <% end %>
+        </ul>
+      </div>
     </nav>
   </div>
 </header>
