--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
     
     <%= stylesheet_link_tag 'application', media: 'all',
                                'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'bootstrap.offcanvas.min', media: 'all',
+                               'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application',
                                'data-turbolinks-track': 'reload' %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jscroll/2.4.1/jquery.jscroll.min.js"></script>
