--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -12,7 +12,7 @@
         <% end %>
       </li>
       <li>
-        <%= link_to portcurio_user_path do %>
+        <%= link_to portcurio_user_path(current_user) do %>
           <%# <span data-feather="home"></span> %>
           マイPortcurio
         <% end %>
