change side-menu name

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -20,7 +20,7 @@
       <li>
         <%= link_to links_path do %>
           <%# <span data-feather="link"></span> %>
-          リンク集
+          お役立ちリンク集
         <% end %>
       </li>
       <li>
